changes to css discipline

--- a/article-discipline/style.css
+++ b/article-discipline/style.css
@@ -357,6 +357,9 @@ ul {
 	z-index: 100;
 	position:relative;
 }
+#noteparapurple {
+    background-color: #99dbfc;
+}
 
 #titlebelow {
 	padding-bottom: 50px;
