--- a/article-discipline/style.css
+++ b/article-discipline/style.css
@@ -204,7 +204,6 @@ ul {
  /* sections with background color */
  .withbackground {
     background-color: #D9D9D9;
-    padding-bottom: 20px;
     padding-top: 20px
 }
  /* big texts */
@@ -226,11 +225,10 @@ ul {
 .stickytitledark {
     background-color: #AD8AFF;
     border-top: 2px solid #000000;
-    position: sticky;
     top: 0;
-    z-index: 1;
-    padding-top: 10px;
-	padding-bottom: 10px;
+    z-index: 200;
+    padding-top: 40px;
+	padding-bottom: 40px;
     padding-left: calc(var(--padding-left-sticky) * 2);
 
 }
@@ -309,7 +307,6 @@ ul {
  /* Sections with the sticky */
 .frontsection {
     padding-top: 20px;
-    padding-bottom: 20px;
     background-color: #D9D9D9;
     position: relative;
     z-index: 2;
@@ -317,7 +314,6 @@ ul {
 
 .frontsection2 {
     padding-top: 20px;
-    padding-bottom: 20px;
     background-color: #D9D9D9;
     position: relative;
     z-index: 4;
@@ -460,6 +456,9 @@ article {
     background-color:#190d34;
 	margin-bottom: 8px;
 }
+.firstparagraph {
+    padding-top: 30px;
+}
 .factoryanimatedtextyellow {
     font-size: 54px;
     font-family: "Urbanist", sans-serif;
@@ -564,6 +563,19 @@ p {
     margin-left: calc(var(--p-margin-side) * 3);
 	margin-right: calc(var(--p-margin-side) * 3);
 }
+.manifestoall {
+    position: relative;
+    z-index: 2;
+}
+.stickytitledark {
+    position: relative;
+    z-index: 2;
+}
+.titleandparas {
+    background-color: #ededed;
+    position: relative;
+    z-index: 2;
+}
 @media (min-width: 950px) {
     :root {
         --root-size: 9px;
@@ -596,6 +608,14 @@ p {
         --p-margin-note-r: 8%;
         --p-margin-note: 1%;
 	}
+    .manifestogroup {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .manifestoall {
+        background-color: #AD8AFF;
+        z-index: 500;
+    }
 
     header {
         padding-bottom: 60px;
@@ -712,6 +732,22 @@ p {
             margin: 0%;
             margin-top: -80px;
             background-color: #121313;
+        }
+        .titleandparas {
+            height: 700px;
+            overflow: auto;
+            border-left: 2px solid;
+            border-bottom: 2px solid;
+            border-right: 2px solid;
+            background-color: #ededed;
+        }
+        .manifestogroup {
+            width: 1200px;
+            align-items: center;
+            margin-left: 20px;
+        }
+        .manifestoall {
+            z-index: 2;
         }
     
 }
