--- a/article-factory/style.css
+++ b/article-factory/style.css
@@ -191,7 +191,7 @@ ul {
 /* Further body section */
  /* sections with background color */
  .withbackground {
-    background-color: #D9D9D9;
+    background-color:#b9e5fb;
     padding-bottom: 20px;
     padding-top: 20px
 }
@@ -399,6 +399,7 @@ p {
     width: auto;
     margin-left: calc(var(--quote-margin-side) * 3);
 	margin-right: calc(var(--quote-margin-side-r) * 3);
+    padding-bottom: 10px;
 }
 .bigtext1 {
     font-family: "Lato";
@@ -548,6 +549,10 @@ p {
     background-color:#291e43;
 	margin-bottom: 8px;
 }
+.markblack  {
+    background-color: #1A1A1A;
+    color: #D9D9D9;
+}
 .settingstextblue {
     font-size: 54px;
     font-family: "Oxanium", serif;
@@ -558,6 +563,13 @@ p {
 	background-color:#AD8AFF;
 	color: #131313;
 	margin-bottom: 8px;
+}
+.underline {
+    
+        text-decoration-line: underline;
+        text-decoration-style: wavy;
+        text-decoration-color:#51C4FE;
+
 }
 .subparagraph {
     background-color: #1A1A1A;
