--- a/article-crime/style.css
+++ b/article-crime/style.css
@@ -189,7 +189,8 @@ ul {
 /* Further body section */
  /* sections with background color */
  .withbackground {
-    background-color: #D9D9D9;
+    background-color: #0e0e0e;
+    color: #dcdcdc;
     padding-bottom: 20px;
     padding-top: 20px
 }
@@ -479,6 +480,10 @@ article {
 	color: #131313;
 	margin-bottom: 8px;
 }
+.markblack  {
+    background-color: #1A1A1A;
+    color: #D9D9D9;
+}
 .factoryanimatedtext {
     font-family: "Montserrat";
     font-size: 54px;
@@ -489,6 +494,27 @@ article {
     color: #e8e8e8;
     background-color:#250400;
 	margin-bottom: 8px;
+}
+section {
+    padding-top: 20px;
+}
+#firstpara {
+    padding-top: 20px;
+}
+.quote1 {
+    border-left: 3px solid #FE5B51;
+    width: auto;
+    margin-left: calc(var(--quote-margin-side) * 5);
+	margin-right: calc(var(--quote-margin-side-r) * 3);
+    margin-bottom: 20px;
+    margin: 7px;
+}
+.underline {
+    
+    text-decoration-line: underline;
+    text-decoration-style: wavy;
+    text-decoration-color:#FE5B51;
+
 }
 .factoryanimatedtextyellow {
     font-size: 54px;
