--- a/article-factory/style.css
+++ b/article-factory/style.css
@@ -399,7 +399,7 @@ p {
     width: auto;
     margin-left: calc(var(--quote-margin-side) * 3);
 	margin-right: calc(var(--quote-margin-side-r) * 3);
-    padding-bottom: 10px;
+    margin-bottom: 20px;
 }
 .bigtext1 {
     font-family: "Lato";
